--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectDescription=Common Config Project
 sonar.sources=src/main/java
 
 # path to project binaries (optional), for example directory of Java bytecode
-sonar.binaries=bin
+sonar.binaries=target
 
 # optional comma-separated list of paths to libraries. Only path to JAR file and path to directory of classes are supported.
 #sonar.libraries=path/to/library/*.jar,path/to/classes/dir,path/to/specific/library/myLibrary.jar,parent/*/*.jar
