--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,6 @@ sonar.projectDescription=Common Config Project
 sonar.sources=src/main/java
 
 # path to project binaries (optional), for example directory of Java bytecode
-sonar.binaries=target
 sonar.java.binaries=target
 
 # optional comma-separated list of paths to libraries. Only path to JAR file and path to directory of classes are supported.
@@ -20,3 +19,5 @@ sonar.java.binaries=target
 sonar.language=java
 
 sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**SpringBootApplication.java
+
+sonar.host.url=http://10.16.2.120:9000
