Comentario de chaves nao obrigatorias no sonar-project.properties.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # required metadata
 sonar.projectKey=spring-boot-base
-sonar.projectName=spring-boot-base
-sonar.projectVersion=1.0-SNAPSHOT
+# sonar.projectName=spring-boot-base
+# sonar.projectVersion=1.0-SNAPSHOT
 
 # optional description
-sonar.projectDescription=Common Config Project
+# sonar.projectDescription=Common Config Project
 
 # path to source directories (required)
 sonar.sources=src/main/java
