Add chave sonar.jacoco.reportPath e alteracao do caminho no pom.xml.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,3 +21,5 @@ sonar.language=java
 sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**SpringBootApplication.java
 
 sonar.host.url=http://10.16.2.120:9000
+
+sonar.jacoco.reportPath=target/coverage-reports/jacoco.exec
