Add chave sonar.java.coveragePlugin jacoco.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,4 +22,5 @@ sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**SpringBootApp
 
 sonar.host.url=http://10.16.2.120:9000
 
+sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPath=target/jacoco.exec
