--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.java.binaries=target
 # The value of the property must be the key of the language.
 sonar.language=java
 
-sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**SpringBootApplication.java
+sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
 
 sonar.host.url=http://10.16.2.120:9000
 
