- Utilizar configuracoes do jacoco somente no arquivo sonar-projec.properties.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,9 +18,8 @@ sonar.java.binaries=target
 # The value of the property must be the key of the language.
 sonar.language=java
 
-sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
-
 sonar.host.url=http://10.16.2.120:9000
-
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPath=target/jacoco.exec
+sonar.dynamicAnalysis=reuseReports
+sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
