- Adicao da propriedade sonar.binaries no arquivo sonar-project.properties.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,6 +20,7 @@ sonar.language=java
 
 sonar.host.url=http://10.16.2.120:9000
 sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPaths=target/jacoco.exec
+sonar.binaries=target/classes
+sonar.jacoco.reportPath=target/jacoco.exec
 sonar.dynamicAnalysis=reuseReports
 sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
