Adicao das propriedades no sonar-project.properties:
sonar.test.inclusions=src/test
sonar.junit.reportsPath=target/surefire-reports
sonar.surefire.reportsPath=target/surefire-reports

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,7 +21,9 @@ sonar.language=java
 sonar.host.url=http://10.16.2.120:9000
 sonar.java.coveragePlugin=jacoco
 sonar.binaries=target/classes
-sonar.tests=junit
+sonar.test.inclusions=src/test
+sonar.junit.reportsPath=target/surefire-reports
+sonar.surefire.reportsPath=target/surefire-reports
 sonar.jacoco.reportPath=target/jacoco.exec
 sonar.dynamicAnalysis=reuseReports
 sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
