--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,6 +19,7 @@ sonar.java.binaries=target/classes
 sonar.language=java
 
 sonar.host.url=http://10.16.2.120:9000
+sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
 sonar.jacoco.reportPath=target/jacoco.exec
