- Adicao da propriedade sonar.coverage.jacoco.xmlReportPaths no arquivo sonar-project.properties.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,3 +23,4 @@ sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
 sonar.jacoco.reportPath=target/jacoco.exec
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
