--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <description>Projeto base Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <jacoco.version>0.8.6</jacoco.version>
     </properties>
     <pluginRepositories>
@@ -119,6 +121,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
             </plugin>
         </plugins>
     </build>
