--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,5 +22,6 @@ sonar.host.url=http://10.16.2.120:9000
 sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
-sonar.jacoco.reportPath=target/site/jacoco/jacoco.xml
+#sonar.jacoco.reportPath=target/site/jacoco/jacoco.xml
+sonar.jacoco.reportPath=target/jacoco.exec
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
