--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,5 +23,5 @@ sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
 #sonar.jacoco.reportPath=target/site/jacoco/jacoco.xml
-sonar.jacoco.reportPath=target/jacoco.exec
-sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.jacoco.reportPath=target/jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco
