- Excluir pastas do coverage no sonar-project.properties.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,3 +23,4 @@ sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/domain/**,**/mapper/**,**SpringBootApplication.java
