--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <jacoco.version>0.8.7</jacoco.version>
     </properties>
     <pluginRepositories>
