--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,8 @@
     <description>Projeto base Spring Boot</description>
     <properties>
         <java.version>11</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
         <jacoco.version>0.8.7</jacoco.version>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
     </properties>
     <pluginRepositories>
         <pluginRepository>
@@ -117,9 +116,13 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>fabric8-maven-plugin</artifactId>
-                <version>4.4.1</version>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>${dockerfile-maven-version}</version>
+                <configuration>
+                    <repository>gcr.io/app-agro-322717/${project.artifactId}</repository>
+                    <tag>${project.version}</tag>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -139,36 +142,6 @@
             </activation>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>io.fabric8</groupId>
-                        <artifactId>fabric8-maven-plugin</artifactId>
-                        <configuration>
-                            <mode>kubernetes</mode>
-                            <forcePull>true</forcePull>
-                            <images>
-                                <image>
-                                    <name>gcr.io/app-agro-322717/${project.artifactId}</name>
-                                    <build>
-                                        <tags>
-                                            <tag>v2</tag>
-                                        </tags>
-                                        <dockerFile>${project.basedir}/deploy/Dockerfile</dockerFile>
-                                        <contextDir>${project.basedir}</contextDir>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>resource</goal>
-                                    <goal>build</goal>
-                                    <goal>push</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
                 </plugins>
             </build>
         </profile>
