--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.java.binaries=target/classes
 # The value of the property must be the key of the language.
 sonar.language=java
 
-sonar.host.url=http://10.16.10.148:9000
+sonar.host.url=http://localhost:9000
 sonar.java.libraries=target
 sonar.java.coveragePlugin=jacoco
 sonar.dynamicAnalysis=reuseReports
